# unc_college_basketball_clustering_project

./: .gitignore  README.md  pyproject.toml
scripts/: run_pipeline.py
src/cbb/: cards.py  config.py  features_style.py  io_espn.py  neighbors.py  reports_pdf.py
